--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>What month is it? (DevOps 10 - CD is working)</h1>
         <h2>Current month is <span id="month">?</span></h2>
+        <p>Test change</p>
     </body>
 </html>
